--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="ThunderBottle.cpp">
       <Filter>ソース ファイル\Bottle</Filter>
     </ClCompile>
+    <ClCompile Include="UiBottle.cpp">
+      <Filter>ソース ファイル\Bottle</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
@@ -261,6 +264,9 @@
       <Filter>ヘッダー ファイル\Bottle</Filter>
     </ClInclude>
     <ClInclude Include="ThunderBottle.h">
+      <Filter>ヘッダー ファイル\Bottle</Filter>
+    </ClInclude>
+    <ClInclude Include="UiBottle.h">
       <Filter>ヘッダー ファイル\Bottle</Filter>
     </ClInclude>
   </ItemGroup>
