--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -132,6 +132,18 @@
     <ClCompile Include="Bottle.cpp">
       <Filter>ソース ファイル\Bottle</Filter>
     </ClCompile>
+    <ClCompile Include="UiBottle.cpp">
+      <Filter>ソース ファイル\Bottle</Filter>
+    </ClCompile>
+    <ClCompile Include="FireBottle.cpp">
+      <Filter>ソース ファイル\Bottle</Filter>
+    </ClCompile>
+    <ClCompile Include="WaterBottle.cpp">
+      <Filter>ソース ファイル\Bottle</Filter>
+    </ClCompile>
+    <ClCompile Include="ThunderBottle.cpp">
+      <Filter>ソース ファイル\Bottle</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
@@ -243,6 +255,18 @@
       <Filter>ヘッダー ファイル\Collider</Filter>
     </ClInclude>
     <ClInclude Include="Bottle.h">
+      <Filter>ヘッダー ファイル\Bottle</Filter>
+    </ClInclude>
+    <ClInclude Include="UiBottle.h">
+      <Filter>ヘッダー ファイル\Bottle</Filter>
+    </ClInclude>
+    <ClInclude Include="FireBottle.h">
+      <Filter>ヘッダー ファイル\Bottle</Filter>
+    </ClInclude>
+    <ClInclude Include="ThunderBottle.h">
+      <Filter>ヘッダー ファイル\Bottle</Filter>
+    </ClInclude>
+    <ClInclude Include="WaterBottle.h">
       <Filter>ヘッダー ファイル\Bottle</Filter>
     </ClInclude>
   </ItemGroup>
