タイトルシーンの実装、Preloadの修正、警告の消化

--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="FireBottle.h" />
+    <ClInclude Include="GameConfig.h" />
     <ClInclude Include="HitCollider.h" />
     <ClInclude Include="ModelActor.h" />
     <ClInclude Include="ActorBase.h" />
