--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -287,5 +287,8 @@
     <ClInclude Include="SoundManager.h">
       <Filter>ヘッダー ファイル\Utility</Filter>
     </ClInclude>
+    <ClInclude Include="GameConfig.h">
+      <Filter>ヘッダー ファイル\Utility</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
