--- a/Resource/Effect/Tool/imgui.ini
+++ b/Resource/Effect/Tool/imgui.ini
@@ -1,54 +1,54 @@
 [Window][###Viewer]
 Pos=1,33
-Size=756,533
+Size=746,527
 Collapsed=0
 DockId=0x00000003
 
 [Window][###ViewerControls]
-Pos=1,568
-Size=756,95
+Pos=1,562
+Size=746,93
 Collapsed=0
 DockId=0x00000004
 
 [Window][###BasicSettings]
-Pos=759,33
-Size=408,377
+Pos=749,33
+Size=402,372
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][###Position]
-Pos=759,33
-Size=408,377
+Pos=749,33
+Size=402,372
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][###Rotation]
-Pos=759,33
-Size=408,377
+Pos=749,33
+Size=402,372
 Collapsed=0
 DockId=0x00000005,2
 
 [Window][###Scale]
-Pos=759,33
-Size=408,377
+Pos=749,33
+Size=402,372
 Collapsed=0
 DockId=0x00000005,3
 
 [Window][###RenderSettings]
-Pos=759,33
-Size=408,377
+Pos=749,33
+Size=402,372
 Collapsed=0
 DockId=0x00000005,5
 
 [Window][###BasicRenderSettings]
-Pos=759,33
-Size=408,377
+Pos=749,33
+Size=402,372
 Collapsed=0
 DockId=0x00000005,4
 
 [Window][###NodeTree]
-Pos=759,412
-Size=408,251
+Pos=749,407
+Size=402,248
 Collapsed=0
 DockId=0x00000006,0
 
@@ -63,16 +63,16 @@ Size=332,84
 Collapsed=0
 
 [Window][###magnification]
-Pos=437,280
+Pos=438,280
 Size=311,112
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xCCA4F8B9 Window=0xC6450C92 Pos=57,33 Size=1166,630 Split=X
+DockSpace     ID=0xCCA4F8B9 Window=0xC6450C92 Pos=65,33 Size=1150,622 Split=X
   DockNode    ID=0x00000001 Parent=0xCCA4F8B9 SizeRef=820,712 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=820,603 HiddenTabBar=1 Selected=0x61EBE4BC
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=820,107 HiddenTabBar=1 Selected=0xADFC1A39
   DockNode    ID=0x00000002 Parent=0xCCA4F8B9 SizeRef=442,712 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=442,426 Selected=0x77C406E7
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=442,426 Selected=0x95629C89
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=442,284 Selected=0xDEF929D3
 
