--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="EffectManager.cpp">
       <Filter>ソース ファイル\Utility</Filter>
     </ClCompile>
+    <ClCompile Include="Effect.cpp">
+      <Filter>ソース ファイル\Utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
@@ -306,6 +309,9 @@
       <Filter>ヘッダー ファイル\Gimmick</Filter>
     </ClInclude>
     <ClInclude Include="EffectManager.h">
+      <Filter>ヘッダー ファイル\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Effect.h">
       <Filter>ヘッダー ファイル\Utility</Filter>
     </ClInclude>
   </ItemGroup>
