--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -47,12 +47,14 @@
     <ClCompile Include="SoundLoader.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="ThunderBottle.cpp" />
+    <ClCompile Include="ThunderGimmick.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="SpriteActor.cpp" />
     <ClCompile Include="UiBottle.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="WaterBottle.cpp" />
+    <ClCompile Include="WaterGimmick.cpp" />
     <ClCompile Include="WindBottle.cpp" />
     <ClCompile Include="WindGimmick.cpp" />
   </ItemGroup>
@@ -95,6 +97,7 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteAnimation.h" />
     <ClInclude Include="ThunderBottle.h" />
+    <ClInclude Include="ThunderGimmick.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="SpriteActor.h" />
@@ -102,6 +105,7 @@
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="WaterBottle.h" />
+    <ClInclude Include="WaterGimmick.h" />
     <ClInclude Include="WindBottle.h" />
     <ClInclude Include="WindGimmick.h" />
   </ItemGroup>
