マップ生成クラスの追加

--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <ClCompile Include="Bottle.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="CreateMap.cpp" />
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="EffectManager.cpp" />
     <ClCompile Include="FireBottle.cpp" />
     <ClCompile Include="FireGimmick.cpp" />
     <ClCompile Include="GimmickBase.cpp" />
+    <ClCompile Include="LoadMap.cpp" />
     <ClCompile Include="ModelActor.cpp" />
     <ClCompile Include="ModelActorCollision.cpp" />
     <ClCompile Include="ModelAnimation.cpp" />
@@ -66,6 +68,7 @@
     <ClInclude Include="CircleCollider.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="CreateMap.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectManager.h" />
     <ClInclude Include="FireBottle.h" />
@@ -73,6 +76,7 @@
     <ClInclude Include="GameConfig.h" />
     <ClInclude Include="GimmickBase.h" />
     <ClInclude Include="HitCollider.h" />
+    <ClInclude Include="LoadMap.h" />
     <ClInclude Include="ModelActor.h" />
     <ClInclude Include="ActorBase.h" />
     <ClInclude Include="ModelActorCollision.h" />
