--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -56,11 +56,13 @@
     <ClCompile Include="TileCube.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="SpriteActor.cpp" />
+    <ClCompile Include="TransparentGimmick.cpp" />
     <ClCompile Include="UiBottle.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="WaterBottle.cpp" />
     <ClCompile Include="WaterGimmick.cpp" />
+    <ClCompile Include="WaterGimmickEnd.cpp" />
     <ClCompile Include="WindBottle.cpp" />
     <ClCompile Include="WindGimmick.cpp" />
   </ItemGroup>
@@ -113,11 +115,13 @@
     <ClInclude Include="Time.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="SpriteActor.h" />
+    <ClInclude Include="TransparentGimmick.h" />
     <ClInclude Include="UiBottle.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="WaterBottle.h" />
     <ClInclude Include="WaterGimmick.h" />
+    <ClInclude Include="WaterGimmickEnd.h" />
     <ClInclude Include="WindBottle.h" />
     <ClInclude Include="WindGimmick.h" />
   </ItemGroup>
