--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -189,6 +189,12 @@
     <ClCompile Include="TileCube.cpp">
       <Filter>ソース ファイル\Actor</Filter>
     </ClCompile>
+    <ClCompile Include="WaterGimmickEnd.cpp">
+      <Filter>ソース ファイル\Gimmick</Filter>
+    </ClCompile>
+    <ClCompile Include="TransparentGimmick.cpp">
+      <Filter>ソース ファイル\Gimmick</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
@@ -355,6 +361,12 @@
     </ClInclude>
     <ClInclude Include="TileCube.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="WaterGimmickEnd.h">
+      <Filter>ヘッダー ファイル\Gimmick</Filter>
+    </ClInclude>
+    <ClInclude Include="TransparentGimmick.h">
+      <Filter>ヘッダー ファイル\Gimmick</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
