各ボトルのコライダーサイズを調整(大塚編集)、風ボトルの出現位置をマス目に合わせて生成(大塚編集)

--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="GameConfig.h" />
     <ClInclude Include="GimmickBase.h" />
     <ClInclude Include="HitCollider.h" />
+    <ClInclude Include="KeyGimmick.h" />
     <ClInclude Include="LoadMap.h" />
     <ClInclude Include="MapTile.h" />
     <ClInclude Include="ModelActor.h" />
