--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="FireBottle.cpp" />
     <ClCompile Include="FireGimmick.cpp" />
     <ClCompile Include="GimmickBase.cpp" />
+    <ClCompile Include="KeyGimmick.cpp" />
     <ClCompile Include="LoadMap.cpp" />
     <ClCompile Include="MapTile.cpp" />
     <ClCompile Include="ModelActor.cpp" />
