--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="FireGimmick.cpp" />
     <ClCompile Include="GimmickBase.cpp" />
     <ClCompile Include="KeyGimmick.cpp" />
+    <ClCompile Include="KeyItem.cpp" />
     <ClCompile Include="LoadMap.cpp" />
     <ClCompile Include="MapTile.cpp" />
     <ClCompile Include="ModelActor.cpp" />
@@ -82,6 +83,7 @@
     <ClInclude Include="GimmickBase.h" />
     <ClInclude Include="HitCollider.h" />
     <ClInclude Include="KeyGimmick.h" />
+    <ClInclude Include="KeyItem.h" />
     <ClInclude Include="LoadMap.h" />
     <ClInclude Include="MapTile.h" />
     <ClInclude Include="ModelActor.h" />
