--- a/EffekseerForDXLib/Tool/Tool/Effekseer.imgui.ini
+++ b/EffekseerForDXLib/Tool/Tool/Effekseer.imgui.ini
@@ -1,54 +1,54 @@
 [Window][###Viewer]
 Pos=1,33
-Size=788,554
+Size=777,547
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][###ViewerControls]
-Pos=1,589
-Size=788,98
+Pos=1,582
+Size=777,97
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][###BasicSettings]
-Pos=791,33
-Size=424,391
+Pos=780,33
+Size=419,386
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][###Position]
-Pos=791,33
-Size=424,391
+Pos=780,33
+Size=419,386
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][###Rotation]
-Pos=791,33
-Size=424,391
+Pos=780,33
+Size=419,386
 Collapsed=0
 DockId=0x00000005,2
 
 [Window][###Scale]
-Pos=791,33
-Size=424,391
+Pos=780,33
+Size=419,386
 Collapsed=0
 DockId=0x00000005,3
 
 [Window][###RenderSettings]
-Pos=791,33
-Size=424,391
+Pos=780,33
+Size=419,386
 Collapsed=0
 DockId=0x00000005,5
 
 [Window][###BasicRenderSettings]
-Pos=791,33
-Size=424,391
+Pos=780,33
+Size=419,386
 Collapsed=0
 DockId=0x00000005,4
 
 [Window][###NodeTree]
-Pos=791,426
-Size=424,261
+Pos=780,421
+Size=419,258
 Collapsed=0
 DockId=0x00000006,0
 
@@ -68,11 +68,11 @@ Size=332,84
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xCCA4F8B9 Window=0xC6450C92 Pos=500,178 Size=1214,654 Split=X
+DockSpace     ID=0xCCA4F8B9 Window=0xC6450C92 Pos=508,178 Size=1198,646 Split=X
   DockNode    ID=0x00000001 Parent=0xCCA4F8B9 SizeRef=820,712 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=820,603 HiddenTabBar=1 Selected=0xF7B6F5EF
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=820,107 HiddenTabBar=1 Selected=0x053AE731
   DockNode    ID=0x00000002 Parent=0xCCA4F8B9 SizeRef=442,712 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=442,391 Selected=0x3A30D193
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=442,391 Selected=0xA714F4BE
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=442,261 Selected=0x2EAEC967
 
