--- a/EffekseerForDXLib/Tool/Tool/Effekseer.imgui.ini
+++ b/EffekseerForDXLib/Tool/Tool/Effekseer.imgui.ini
@@ -1,54 +1,54 @@
 [Window][###Viewer]
 Pos=1,33
-Size=683,486
+Size=610,438
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][###ViewerControls]
-Pos=1,521
-Size=683,86
+Pos=1,473
+Size=610,78
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][###BasicSettings]
-Pos=686,33
-Size=368,343
+Pos=613,33
+Size=329,309
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][###Position]
-Pos=686,33
-Size=368,343
+Pos=613,33
+Size=329,309
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][###Rotation]
-Pos=686,33
-Size=368,343
+Pos=613,33
+Size=329,309
 Collapsed=0
 DockId=0x00000005,2
 
 [Window][###Scale]
-Pos=686,33
-Size=368,343
+Pos=613,33
+Size=329,309
 Collapsed=0
 DockId=0x00000005,3
 
 [Window][###RenderSettings]
-Pos=686,33
-Size=368,343
+Pos=613,33
+Size=329,309
 Collapsed=0
 DockId=0x00000005,5
 
 [Window][###BasicRenderSettings]
-Pos=686,33
-Size=368,343
+Pos=613,33
+Size=329,309
 Collapsed=0
 DockId=0x00000005,4
 
 [Window][###NodeTree]
-Pos=686,378
-Size=368,229
+Pos=613,344
+Size=329,207
 Collapsed=0
 DockId=0x00000006,0
 
@@ -68,11 +68,11 @@ Size=372,84
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xCCA4F8B9 Window=0xC6450C92 Pos=580,178 Size=1053,574 Split=X
+DockSpace     ID=0xCCA4F8B9 Window=0xC6450C92 Pos=636,178 Size=941,518 Split=X
   DockNode    ID=0x00000001 Parent=0xCCA4F8B9 SizeRef=820,712 Split=Y
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=820,603 HiddenTabBar=1 Selected=0xF7B6F5EF
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=820,107 HiddenTabBar=1 Selected=0x053AE731
   DockNode    ID=0x00000002 Parent=0xCCA4F8B9 SizeRef=442,712 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=442,391 Selected=0xA714F4BE
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=442,391 Selected=0x3A30D193
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=442,261 Selected=0x2EAEC967
 
