プレイヤーの足元判定を実装

--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -386,5 +386,8 @@
     <ClInclude Include="Goal.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
     </ClInclude>
+    <ClInclude Include="PlayerFoot.h">
+      <Filter>ヘッダー ファイル\Actor</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
