--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Fade.h" />
     <ClInclude Include="GameMain.h" />
+    <ClInclude Include="PlayerFoot.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="SpriteLoader.h" />
     <ClInclude Include="Input.h" />
