--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -183,12 +183,6 @@
     <ClCompile Include="MapTile.cpp">
       <Filter>ソース ファイル\Actor</Filter>
     </ClCompile>
-    <ClCompile Include="TileCube.cpp">
-      <Filter>ソース ファイル\Actor</Filter>
-    </ClCompile>
-    <ClCompile Include="WaterGimmickEnd.cpp">
-      <Filter>ソース ファイル\Gimmick</Filter>
-    </ClCompile>
     <ClCompile Include="TransparentGimmick.cpp">
       <Filter>ソース ファイル\Gimmick</Filter>
     </ClCompile>
@@ -203,6 +197,15 @@
     </ClCompile>
     <ClCompile Include="SceneManager.cpp">
       <Filter>ソース ファイル\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="GetBottle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerFoot.cpp">
+      <Filter>ソース ファイル\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="TileCube.cpp">
+      <Filter>ソース ファイル\Actor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -371,9 +374,6 @@
     <ClInclude Include="TileCube.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
     </ClInclude>
-    <ClInclude Include="WaterGimmickEnd.h">
-      <Filter>ヘッダー ファイル\Gimmick</Filter>
-    </ClInclude>
     <ClInclude Include="TransparentGimmick.h">
       <Filter>ヘッダー ファイル\Gimmick</Filter>
     </ClInclude>
@@ -388,6 +388,9 @@
     </ClInclude>
     <ClInclude Include="PlayerFoot.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="GetBottle.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
