落下時のマップの再ロードとOnDestroyの追加(鍋山編集)

--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -153,9 +153,6 @@
     <ClCompile Include="SoundLoader.cpp">
       <Filter>ソース ファイル\Loader</Filter>
     </ClCompile>
-    <ClCompile Include="SoundManager.cpp">
-      <Filter>ソース ファイル\Utility</Filter>
-    </ClCompile>
     <ClCompile Include="WindGimmick.cpp">
       <Filter>ソース ファイル\Gimmick</Filter>
     </ClCompile>
@@ -198,14 +195,14 @@
     <ClCompile Include="SceneManager.cpp">
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="GetBottle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
     <ClCompile Include="PlayerFoot.cpp">
       <Filter>ソース ファイル\Actor</Filter>
     </ClCompile>
     <ClCompile Include="TileCube.cpp">
       <Filter>ソース ファイル\Actor</Filter>
-    </ClCompile>
-    <ClCompile Include="GetBottle.cpp">
-      <Filter>ソース ファイル\Bottle</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -380,6 +377,9 @@
     <ClInclude Include="KeyGimmick.h">
       <Filter>ヘッダー ファイル\Gimmick</Filter>
     </ClInclude>
+    <ClInclude Include="KeyItem.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
     <ClInclude Include="Goal.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
     </ClInclude>
@@ -387,10 +387,7 @@
       <Filter>ヘッダー ファイル\Actor</Filter>
     </ClInclude>
     <ClInclude Include="GetBottle.h">
-      <Filter>ヘッダー ファイル\Bottle</Filter>
-    </ClInclude>
-    <ClInclude Include="KeyItem.h">
-      <Filter>ヘッダー ファイル\Gimmick</Filter>
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
