鍵を持っているとき、画面右上に画像を表示するようにした(画像は仮置き)

--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="SpriteActor.h" />
     <ClInclude Include="TransparentGimmick.h" />
     <ClInclude Include="UiBottle.h" />
+    <ClInclude Include="UiKeyItem.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="WaterBottle.h" />
