--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -383,5 +383,8 @@
     <ClInclude Include="GetBottle.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="UiKeyItem.h">
+      <Filter>ヘッダー ファイル\Actor</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
