ステージ上に鍵が存在しているとき、鍵の取得状況に応じて表示する画像を切り替えられるようにした

--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="TileCube.cpp">
       <Filter>ソース ファイル\Actor</Filter>
     </ClCompile>
+    <ClCompile Include="UiKeyItem.cpp">
+      <Filter>ソース ファイル\Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
