--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="SpriteActor.cpp" />
     <ClCompile Include="TransparentGimmick.cpp" />
     <ClCompile Include="UiBottle.cpp" />
+    <ClCompile Include="UiKeyItem.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="WaterBottle.cpp" />
