--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -57,6 +57,7 @@
     <ClCompile Include="TileCube.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="SpriteActor.cpp" />
+    <ClCompile Include="TitleSelect.cpp" />
     <ClCompile Include="TransparentGimmick.cpp" />
     <ClCompile Include="UiBottle.cpp" />
     <ClCompile Include="UiKeyItem.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="ThunderBottle.h" />
     <ClInclude Include="TileCube.h" />
     <ClInclude Include="Time.h" />
+    <ClInclude Include="TitleSelect.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="SpriteActor.h" />
     <ClInclude Include="TransparentGimmick.h" />
