--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="TitleSelect.cpp">
       <Filter>ソース ファイル\Actor</Filter>
     </ClCompile>
+    <ClCompile Include="PlayData.cpp">
+      <Filter>ソース ファイル\Utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
@@ -379,6 +382,9 @@
     </ClInclude>
     <ClInclude Include="TitleSelect.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayData.h">
+      <Filter>ヘッダー ファイル\Utility</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
