操作説明画面の追加

--- a/3D_Test.vcxproj.filters
+++ b/3D_Test.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClCompile Include="GetBottle.cpp">
       <Filter>ソース ファイル\Bottle</Filter>
     </ClCompile>
+    <ClCompile Include="Instructions.cpp">
+      <Filter>ソース ファイル\Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneBase.h">
@@ -385,6 +388,9 @@
     </ClInclude>
     <ClInclude Include="KeyItem.h">
       <Filter>ヘッダー ファイル\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="Instructions.h">
+      <Filter>ヘッダー ファイル\Utility</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
