--- a/3D_Test.vcxproj
+++ b/3D_Test.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="FireGimmick.cpp" />
     <ClCompile Include="GetBottle.cpp" />
     <ClCompile Include="GimmickBase.cpp" />
+    <ClCompile Include="Instructions.cpp" />
     <ClCompile Include="KeyGimmick.cpp" />
     <ClCompile Include="KeyItem.cpp" />
     <ClCompile Include="LoadMap.cpp" />
@@ -82,6 +83,7 @@
     <ClInclude Include="GimmickBase.h" />
     <ClInclude Include="Goal.h" />
     <ClInclude Include="HitCollider.h" />
+    <ClInclude Include="Instructions.h" />
     <ClInclude Include="KeyGimmick.h" />
     <ClInclude Include="KeyItem.h" />
     <ClInclude Include="LoadMap.h" />
